--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="content">
         <div id="set-8">
             <div class="nav hi-icon-wrap hi-icon-effect-8">
-                <p>立即投票<a href="#section2" class="hi-icon hi-icon-archive"></a></p>
+                <p><a href="#section2">立即投票</a><a href="#section2" class="hi-icon hi-icon-archive"></a></p>
             </div>
         </div>
         <div class="declare">
