--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ $(function() {
         var $anchor = $(this);
 
         $('html, body').stop().animate({
-            scrollTop: $($anchor.attr('href')).offset().top
+            scrollTop: $(".logo").offset().top - 50
         }, 1500,'easeInOutExpo');
                     /*
                     if you don't want to use the easing effects:
